# ai-collab

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  README_EN.md  install.sh  pyproject.toml  setup.py  test_health_check.py  validate.py
.github/workflows/: ci.yml  publish-pypi.yml
ai_collab/: __init__.py  cli.py  config_prompt.py  entry_prompt.py  init_prompt.py  launch_prompt.py  launcher_service.py  orchestrator.py  plan_editor_prompt.py  terminal_ui.py  ux_lab.py  ux_lab_v3.py  ux_lab_v3_textual.py  web_api.py
ai_collab/core/: __init__.py  config.py  detector.py  environment.py  orchestrator.py  profiler.py  run_state.py  selector.py  tmux_workspace.py  updates.py  workflow.py  workflow_v2.py
ai_collab/skills/ai-collab-orchestrator/: SKILL.md
ai_collab/skills/ai-collab-orchestrator/scripts/: tmux_agent_handoff.py
ai_collab/tui/: __init__.py  launcher.py  launcher_service.py  launcher_textual.py  settings.py  setup.py  setup_raw.py
config/: config.template.json  workflows.template.json
contracts/vnext/: README.md
contracts/vnext/mock/: run_events.jsonl  run_projection.json
contracts/vnext/schemas/: run_action.schema.json  run_projection.schema.json  stored_run_event.schema.json
crates/ac_core/: Cargo.toml
crates/ac_core/src/: lib.rs
crates/ac_daemon/: Cargo.toml
crates/ac_daemon/src/: adapter.rs  api.rs  lib.rs  main.rs  service.rs  toolbox.rs
crates/ac_daemon/tests/: p2_daemon_http.rs  p3_real_adapters.rs
crates/ac_engine/: Cargo.toml
crates/ac_engine/examples/: export_contract_assets.rs
crates/ac_engine/src/: lib.rs
crates/ac_engine/tests/: p1_contract_assets.rs
crates/ac_protocol/: Cargo.toml
crates/ac_protocol/src/: lib.rs
crates/ac_storage/: Cargo.toml
crates/ac_storage/src/: lib.rs
crates/ac_storage/tests/: file_run_store.rs
docs/: AI_COLLAB_FULL_FLOW_REFERENCE_ZH.md  AI_COLLAB_ORCHESTRATION_BASELINE_ZH.md  CONFIG_HIERARCHY_ZH.md  INIT_CONFIG_DESIGN_ZH.md  MVP_PLAN_2026_05_20_ZH.md  NEXT_DEVELOPMENT_POLICY_ZH.md  PRODUCT_DIRECTION_ZH.md  RELEASE.md  TMUX_MULTI_AGENT_REQUIREMENTS_AND_TEST_FLOW.md  TMUX_MULTI_AGENT_REQUIREMENTS_AND_TEST_FLOW_ZH.md  USAGE.md  VNEXT_RUST_PLATFORM_ARCHITECTURE_ZH.md  snake.html
docs/archive/ux-flow-lab-obsolete/: README.md  V1_PLAN.md  V3_PLAN.md  preview.py  run_all.sh  smoke-bundle-v2.json  smoke-bundle-v3.json  smoke-bundle.json
tests/: test_cli_tmux_mode.py  test_config.py  test_config_prompt.py  test_detector.py  test_dynamic_prompt.py  test_entry_prompt.py  test_environment.py  test_init_prompt.py  test_launch_prompt.py  test_launcher_tui.py  test_orchestrator.py  test_plan_editor_prompt.py  test_profiler.py  test_run_state.py  test_selector.py  test_settings_tui.py  test_setup_raw.py  test_setup_tui.py  test_tmux_workspace.py  test_updates.py  test_ux_lab.py  test_ux_lab_v3.py  test_web_api.py  test_workflow.py  test_workflow_v2.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/server/: dev.mjs  index.mjs  state.mjs
web/src/: App.tsx  api.ts  contracts.ts  styles.css
