[workspace]
members = [
    "crates/ac_protocol",
    "crates/ac_core",
    "crates/ac_engine",
    "crates/ac_storage",
    "crates/ac_daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sky Hua <dev@sky-hua.xyz>"]
repository = "https://github.com/skyhua0224/ai-collab"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "=0.1.83"
axum = { version = "=0.7.9", features = ["json", "ws"] }
chrono = { version = "0.4.39", features = ["clock", "serde"] }
futures-util = "=0.3.31"
reqwest = { version = "=0.12.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
schemars = { version = "=0.8.21", features = ["chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "=3.10.1"
thiserror = "2.0.11"
tokio = { version = "=1.43.0", features = ["macros", "rt-multi-thread", "process", "time", "sync", "net", "signal", "fs"] }
tokio-tungstenite = { version = "=0.24.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = "=0.7.13"
url = "=2.5.4"
