[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-collab"
version = "0.1.1"
description = "AI Collaboration System / 智能多 Agent 协作编排框架"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Sky Hua", email = "skyhua@users.noreply.github.com"}
]
keywords = ["ai", "collaboration", "cli", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/skyhua/ai-collab"
Repository = "https://github.com/skyhua/ai-collab"

[project.scripts]
ai-collab = "ai_collab.cli:project_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_collab*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
